# XposedJniTrace

./: README.md  build.gradle  settings.gradle
JniTrace/: build.gradle
JniTrace/src/main/cpp/: CMakeLists.txt  main.cpp
JniTrace/src/main/cpp/hook/: JnitraceForC.cpp  invokePrintf.cpp  linkerHandler.cpp  linker_callback.cpp  stringHandler.cpp
app/: build.gradle
app/src/main/assets/: JnitraceDex.dex
app/src/main/cpp/: CMakeLists.txt  main.cpp
baseLib/: build.gradle
baseLib/src/main/: AndroidManifest.xml
il2cppTrace/: build.gradle  proguard-rules.pro
il2cppTrace/src/main/: AndroidManifest.xml
il2cppTrace/src/main/assets/: il2cppDex.dex  xposed_init
il2cppTrace/src/main/cpp/: CMakeLists.txt  main.cpp
il2cppTrace/src/main/cpp/libffi/: CMakeLists.txt  ffi.h  fficonfig.h
il2cppTrace/src/main/cpp/libffi/aarch64/: ffi_arm64.c
nativeLib/: build.gradle
nativeLib/src/main/cpp/: CMakeLists.txt
nativeLib/src/main/cpp/adapter/: adapter.cpp
nativeLib/src/main/cpp/dlfc/: CMakeLists.txt  dlfcn_compat.cpp
nativeLib/src/main/cpp/dlfc/xDL/: xdl.cpp
nativeLib/src/main/cpp/findsyscall/: CMakeLists.txt
nativeLib/src/main/cpp/hook/: HookUtils.cpp
nativeLib/src/main/cpp/hook/signhook/common/: elf.cpp
nativeLib/src/main/cpp/includes/: HookUtils.h  appUtils.h  dlfcn_compat.h  elf_util.h  libpath.h  linkerHandler.h  parse.h  stringUtils.h
nativeLib/src/main/cpp/linker/: CMakeLists.txt  linkerHandler.cpp
nativeLib/src/main/cpp/utils/: CMakeLists.txt  appUtils.cpp  parse.cpp  stringUtils.cpp
nativeLib/src/main/cpp/xunwind/: xu_printer.cpp
(+54 files in other folders)
